Second iteration, second page added

--- a/index.html
+++ b/index.html
@@ -23,3 +23,9 @@
         </div>
     </div>
 </header>
+<section>
+    <h2> Build Amazing things </h2>
+    <p> Essential JavaScript development tools that help you go to to market faster and build powerful applications using modern open source code</p>
+    <a>href="join.html">See plans join free</a>
+    <img src = images/triangle-hexagon.svg alt = "triangle-hexagon"/>
+</section>
