--- a/index.html
+++ b/index.html
@@ -25,7 +25,39 @@
 </header>
 <section>
     <h2> Build Amazing things </h2>
-    <p> Essential JavaScript development tools that help you go to to market faster and build powerful applications using modern open source code</p>
-    <a>href="join.html">See plans join free</a>
+    <article> Essential JavaScript development tools that help you go to to market faster and build powerful applications using modern open source code</article>
+   <div>
+    <a href="join.html">See plans join free</a>
+    </div>
     <img src = images/triangle-hexagon.svg alt = "triangle-hexagon"/>
+</section>
+<section>
+    <h2> Bring the best of open source to your company</h2>
+    <p> npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and ger more out of the tools your team already knows and loves</p>
+    <img src = https://www.pngitem.com/middle/iwmwhw_arrow-fullscreen-box-exit-hd-png-download/ alt = "a box with an arrow clicking on it"/>
+</section>
+<section>
+    <div>
+    <h2> Zero configuration </h2>
+    <p> Create an org, add your team and start collaborating. Nothing to configure, set up or manage</p>
+    <img src = images/zero-configuration.svg alt = "zero-configuration"/>
+    </div>
+    <div>
+        <h2> Team management </h2>
+        <p> Control who has access to what modules within your team space using straight</p>
+        <img src = images/team-management.svg alt = "team-management"/>
+    </div>
+    <div>
+        <h2> Familiar features </h2>
+        <p> npm Orgs has 100% parity with all the public npm registry features your developers already use</p>
+        <img src = images/familiar-features.svg alt = "familiar-features"/>
+    </div>
+    <div>
+        <h2> npm audit </h2>
+        <p> Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer</p>
+        <a href="org.html">Create an org</a>
+    </div>
+
+
+
 </section>
