Added CSS content to intial and second page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <header>
+    <link rel="stylesheet" href = "styles.css"/>
     <div>
         <div>
             <img class="blackHeart" src = images/black-heart.png alt =blackHeart/>
@@ -17,21 +18,26 @@
     </div>
     <div>
         <div id = "header">
-            <img src = images/npm-logo.png alt = "Logo"/>
+            <img class = "npm" src = images/npm-logo.png alt = "Logo"/>
             <input type = "search" placeholder = "Search here" id="search-bar"/>
             <button id = "button" placeholder = "Button"></button>
         </div>
     </div>
 </header>
-<section>
-    <h2> Build Amazing things </h2>
-    <article> Essential JavaScript development tools that help you go to to market faster and build powerful applications using modern open source code</article>
-   <div>
-    <a href="join.html">See plans join free</a>
-    </div>
-    <img src = images/triangle-hexagon.svg alt = "triangle-hexagon"/>
+<section id = "BAT">
+    <h2 id = "mainHeading"> Build Amazing things </h2>
+    <article> 
+        <p id = "essentialText">Essential JavaScript development tools that help you go to to market faster and build powerful applications using modern open source code</p>
+
+        </article>
+        <div id = "links">
+    <a href="plans.html">See plans</a>
+        </div>
+    <a href="join.html">Join free</a>
+    
 </section>
 <section>
+    <img src = images/triangle-hexagon.svg alt = "triangle-hexagon"/>
     <h2> Bring the best of open source to your company</h2>
     <p> npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and ger more out of the tools your team already knows and loves</p>
     <img src = https://www.pngitem.com/middle/iwmwhw_arrow-fullscreen-box-exit-hd-png-download/ alt = "a box with an arrow clicking on it"/>
