First page relatively done not perfect

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
         </article>
         <div id = "links">
-    <a href="plans.html">See plans</a>
-        </div>
-    <a href="join.html">Join free</a>
+    <a href="plans.html" class = "plans">See plans</a>
+    <a href="join.html" class = "join">Join free</a>
+    </div>
     
 </section>
 <section>
