--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     </div>
     
 </section>
-<section>
-    <img src = images/triangle-hexagon.svg alt = "triangle-hexagon"/>
-    <h2> Bring the best of open source to your company</h2>
-    <p> npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and ger more out of the tools your team already knows and loves</p>
-    <img src = https://www.pngitem.com/middle/iwmwhw_arrow-fullscreen-box-exit-hd-png-download/ alt = "a box with an arrow clicking on it"/>
+<section id = "bestOpen">
+    <img src = images/triangle-hexagon.svg alt = "triangle-hexagon" id = "triangle"/>
+    <h2 id = "secondHeading"> Bring the best of open source to your company</h2>
+    <p id = "tool"> npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and ger more out of the tools your team already knows and loves</p>
+    
 </section>
 <section>
     <div>
